style.css
* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

body {
  background-color: #f1ede4;
  font-family: 'Open Sans', sans-serif;
}

.container {
  position: relative;
  min-height: 100vh;
}

/* Colors: 
 #F1EDE4 --> white
 #9C7448 --> brown
 #CC9775 --> light bown
 #814A37 --> redish brown
 #2B2E33 --> dark navy blue
*/

/* ----------------------Navbar-------------------------- */
ul {
  list-style: none;
}

a {
  color: #333;
  text-decoration: none;
}

.navbar {
  overflow: hidden;
  background-color: #2b2e33;
}

.navbar a {
  float: right;
  color: #f2f2f2;
  text-align: center;
  padding: 20px 16px;
  text-decoration: none;
  font-size: 17px;
}

li a:hover {
  background-color: #cc9775;
  color: black;
}

/* ----------------------Footer-------------------------- */

footer {
  background-color: black;
  position: absolute;
  width: 100%;
  height: 3rem;
  bottom: 0;
}

footer section {
  display: flex;
  justify-content: center;
  align-items: center;
}

footer a {
  color: #f1ede4;
  padding-left: 25px;
  padding-top: 15px;
}

/* ----------------------Content-------------------------- */

.about-me {
  width: 50%;
  margin: 3rem;
}

.about-me h3 {
  padding-bottom: 1rem;
}

.heading {
  margin: 3rem;
}

.links {
  display: flex;
  justify-content: space-around;
  align-items: center;
  margin-top: 8rem;
}

.links button {
  border: none;
  padding: 7rem;
  text-align: center;
  text-decoration: none;
  font-size: large;
  display: inline-block;
  border-radius: 5%;
  border: 2px solid #2b2e33;
  box-shadow: 10px 10px #cc9775;
  transition: top ease 0.5s;
  position: relative;
  top: 0;
}

.links button a {
  color: black;
}

.links button:hover {
  top: -10px;
  background-color: #2b2e33;
  box-shadow: 10px 10px #814a37;
}

.links button:hover a {
  color: #f1ede4;
}

/* ----------------------Works-------------------------- */

.headersub{

  font-size: 35px;
  text-align: center;
  color:black;
  text-decoration: none;
  text-align: center;

}

.container5 {
  position: relative;
  display: block;
  width: 60%;
  margin-right: auto;
 color: white;
 text-decoration: none;
}

.paragraphs{


   position: relative;
  display: block;
  width: 60%;
  margin-left: auto;
 
 text-decoration: none;
  color: black;
   font-size:20px
}


.container6 {
  position: relative;
  display: block;
  width: 60%;
  margin-left: auto;
  color: white;
  text-decoration: none;
}

.paragraphs1{
   position: relative;
  display: block;
  width: 60%;
 
 text-decoration: none;
  color: black;
  font-size:20px;
  margin-left: auto;
  margin-right: auto;right
}

/* ----------------------Blogs-------------------------- */
.blogs {
  display: flex; 
  justify-content: space-around;
  align-items: center;
}

.blogs .day {
  border: 2px solid black; 
  width: 33%; 
  height: 15rem; 
}

.blog-container .day-heading {
  width: 53px; 
  padding-bottom: 10px; 
}

.blog-container .blog-heading {
  margin-top: 2rem; 
  margin-bottom: 2rem; 
  margin-left: 8px; 
  text-align: center;
}



/*------------contact-------------------*/
input[type=text], select, textarea {
  width: 100%;
  padding: 12px; 
  border: 1px solid #ccc;
  border-radius: 4px; 
  box-sizing: border-box; 
  margin-top: 6px; 
  margin-bottom: 16px; 
  resize: vertical 
}
input[type=submit] {
  background-color: #cc9775;
  color: white;
  padding: 12px 20px;
  border: none;
  border-radius: 4px;
  cursor: pointer;
}
input[type=submit]:hover {
  background-color: #2B2E33;
}

